# streamapp

./: CMakeLists.txt  COolDocker  CurlStartFrames.sh  CurlStartRecord.sh  Dockerfile  README.md  keep_running.sh
src/: App.cpp  AppComponent.hpp  AuthDataStorage.cpp  AuthDataStorage.hpp  CMakeLists.txt  Utils.cpp  Utils.hpp  authdatastorage.cpp  authdatastorage.h
src/controller/: MediaController.cpp  MediaController.hpp
src/hls/: Playlist.cpp  Playlist.hpp
video/: generate_pls.sh  stream_gen.sh  z_video2_cuhunk_0.ts  z_video2_cuhunk_11.ts  z_video2_cuhunk_2.ts  z_video2_cuhunk_6.ts  z_video2_cuhunk_7.ts
video/records/: output.avi
video/to_play/dummy_video/: playlist1.m3u8  seg_test_src_0.ts  seg_test_src_1.ts  seg_test_src_2.ts  seg_test_src_3.ts  seg_test_src_4.ts  seg_test_src_5.ts  seg_test_src_6.ts  seg_test_src_7.ts  seg_test_src_8.ts  seg_test_src_9.ts
video/to_play/mults/: z_video1_cuhunk_0.ts  z_video1_cuhunk_1.ts  z_video2_cuhunk_1.ts  z_video2_cuhunk_10.ts  z_video2_cuhunk_3.ts  z_video2_cuhunk_4.ts  z_video2_cuhunk_5.ts  z_video2_cuhunk_8.ts  z_video2_cuhunk_9.ts
